k8s/apps/repo-social/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: repo-social
  namespace: apps
  labels:
    app: repo-social
spec:
  replicas: 1 # Number of replicas
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: repo-social
  template:
    metadata:
      labels:
        app: repo-social
    spec:
      imagePullSecrets:
        - name: pull-secret
      containers:
        - name: repo-social
          image: registry.cri.epita.fr/ing/majeures/tc/info/student/2026/2025-epitweet-tinyx-02/repo-social:v1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
