k8s/apps/repo-social/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: repo-social
  namespace: apps
  labels:
    app: repo-social
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /social
            pathType: Prefix
            backend:
              service:
                name: repo-social
                port:
                  number: 8080
